Update config files

--- a/ev_embeddings.ini
+++ b/ev_embeddings.ini
@@ -10,6 +10,9 @@ embedding_type =
 # File path to folder that contains the embeddings
 embedding_folder =
 
+# File path to output fasta file. A file with the given filename will be created at the specified location
+out_file =
+
 [SINGLE SEQUENCE EMBEDDINGS]
 # WARNING: this section will only be considered if SingleSeq was selected as embedding_type
 
@@ -22,11 +25,17 @@ evolutionary_information =
 # MSA file in stockholm format
 msa_file =
 
+# File path to individual predictions for each sequence in the MSAs
+out_folder_msa_fastas =
+
 [PSSM]
 # WARNING: this section will only be considered if PSSM was selected as evolutionary_information
 
-# Select the type of PSSM prediction model that should be used. Valid options are: 0, 1
+# Select the type of PSSM prediction model that should be used. Valid options are: Concat, Split
 model_selection =
 
-# PSSM file in... TODO: format
+# PSSM file in stockholm format
 pssm_file =
+
+# lookup file
+lookup_file =
