--- a/ev_embeddings_example.ini
+++ b/ev_embeddings_example.ini
@@ -2,19 +2,21 @@
 
 # Select the model that was used to generate the input embeddings of the sequences.
 # Valid options are: SeqVec, Bert, ProtT5
-embedding_model =
-
+embedding_model = ProtT5
 # Select the type of embedding that was used. Valid options are: SingleSeq, MSA
-embedding_type =
+embedding_type = SingleSeq
 
 # File path to folder that contains the embeddings
-embedding_folder =
+embedding_folder = example_files\embeddings\singleseq
+
+# File path to output fasta file. A file with the given filename will be created at the specified location
+out_file = example_files\example_output\predictions.fasta
 
 [SINGLE SEQUENCE EMBEDDINGS]
 # WARNING: this section will only be considered if SingleSeq was selected as embedding_type
 
 # select what kind of evolutionary information should be used. Valid options are: None, MSAConsensus, PSSM
-evolutionary_information =
+evolutionary_information = None
 
 [MSA CONSENSUS]
 # WARNING: this section will only be considered if MSAConsensus was selected as evolutionary_information
@@ -22,11 +24,17 @@ evolutionary_information =
 # MSA file in stockholm format
 msa_file =
 
+# File path to individual predictions for each sequence in the MSAs
+out_folder_msa_fastas =
+
 [PSSM]
 # WARNING: this section will only be considered if PSSM was selected as evolutionary_information
 
 # Select the type of PSSM prediction model that should be used. Valid options are: 0, 1
 model_selection =
 
-# PSSM file in... TODO: format
+# PSSM file in stockholm format
 pssm_file =
+
+# lookup file
+lookup_file =
