Adjust file paths in .ini example file

--- a/src/ev_embeddings_example.ini
+++ b/src/ev_embeddings_example.ini
@@ -7,10 +7,10 @@ embedding_model = ProtT5
 embedding_type = SingleSeq
 
 # File path to folder that contains the embeddings
-embedding_folder = ..\example_files\embeddings\singleseq
+embedding_folder = example_files\embeddings\singleseq
 
 # File path to output fasta file. A file with the given filename will be created at the specified location
-out_file = ..\example_files\example_output\predictions.fasta
+out_file = example_files\example_output\predictions.fasta
 
 [SINGLE SEQUENCE EMBEDDINGS]
 # WARNING: this section will only be considered if SingleSeq was selected as embedding_type
